@@ -1,4 +1,5 @@
 0.08
+ - Rewrite exmaple in doc for MediainfoSnak to some real.
  - Rewrite example in doc for MediainfoStatement to some real.
 
 0.07 2021-01-26T13:28:48+01:00
